<resources>
    <string name="app_name">Github User</string>

    <string name="about_me">About Me</string>
    <string name="my_name">Fauzan Aji Prayoga</string>
    <string name="my_username">faprayyy</string>
    <string name="my_email">fauzanjr1@gmail.com</string>

    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="tab_text_3">Repository</string>

    <string name="please_search_first">Please search first</string>
    <string name="user_not_found">User not found!</string>
    <string name="search_user">Search user…</string>
    <string name="followerfollowing">%1$s followers ▪️ %2$s following</string>
    <string name="change_language">Change languange</string>
    <string name="add_favorite_user">Add to favorites</string>
    <string name="favorite_user">Favorite User</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="add_notification_summary">Give notifications everyday</string>


    <string name="key_notification" translatable="false">notification</string>
    <string name="key_about_me" translatable="false">about me</string>
    <string name="key_language" translatable="false">language</string>
    <string name="settings">Settings</string>
    <string name="notification_enabled">Notification enabled</string>
    <string name="notification_disabled">Notification disabled</string>
    <string name="find_user_now">Let\'s find your favorite users now</string>
    <string name="remove_favorite">%s remove from favorite!</string>
    <string name="add_favorite">%s add to favorite!</string>
    <string name="you_don_t_have_any_favorite_users">You don\'t have any favorite users now</string>
</resources>