<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.usersearch.UserSearchFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarId"
            app:theme="@style/Theme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/about_me"
            app:navigationIcon="@drawable/ic_baseline_chevron_left_24_white"
            app:titleTextColor="@color/white"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            tools:src="@color/black"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textSize="@dimen/text_header"
            android:textStyle="bold"
            android:textColor="@color/primaryLightColor"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/text_size"
            android:textColor="@color/primaryLightColor"
            android:text="@string/my_email"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>